# onetools-py

./: .env.example  .gitignore  CLAUDE.md  README.md  add_query_modules_menu.py  check_current_menus.py  check_data_db.py  check_menu_db.py  check_server_1.py  check_tables.py  cleanup_port15008.bat  pyproject.toml  requirements.txt  start_fullstack.bat  test_db.py  test_delete_direct.py  test_odbc.py  test_saved_queries.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: query_history.py
app/api/v1/: api.py
app/api/v1/endpoints/: custom.py  database.py  query_forms.py  settings.py
app/core/: __init__.py  config.py  database.py  database_init.py  logging.py  sqlite_manager.py  sqlserver_manager.py
app/models/: __init__.py  schemas.py  tables.py
app/services/: __init__.py  config_service.py  query_form_service.py  query_history_service.py  query_service.py  schema_analyzer.py
app/utils/: schema_analyzer.py  sql_builder.py  sql_parser.py
config/: settings.yaml
frontend/: .eslintrc.js  config-overrides.js  package-lock.json  package.json  pnpm-lock.yaml  start_npm.bat  start_simple.bat
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: DynamicForm.tsx  QueryFormBuilder.tsx
frontend/src/components/Layout/: DatabaseSelector.tsx  MainLayout.tsx
frontend/src/components/MultipleQueryResults/: MultipleQueryResults.tsx
frontend/src/components/QueryResults/: QueryResults.tsx
frontend/src/components/SchemaAnalysisModal/: SchemaAnalysisModal.tsx
frontend/src/components/SqlEditor/: SqlEditor.tsx
frontend/src/components/VirtualTable/: VirtualTable.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: DatabaseContext.tsx
frontend/src/hooks/: useMenuConfig.ts  useQueryForms.ts
frontend/src/pages/CustomQuery/: CustomQuery.tsx
frontend/src/pages/DatabaseConfig/: DatabaseConfig.tsx  index.ts
frontend/src/pages/DatabaseConfig/components/: DatabaseServerManagement.tsx
frontend/src/pages/MenuConfig/: MenuConfig.tsx
frontend/src/pages/QueryForms/: QueryFormExecution.tsx  QueryFormManagement.tsx
frontend/src/pages/SavedQueries/: SavedQueries.tsx
frontend/src/pages/Settings/: Settings.tsx
frontend/src/pages/Settings/components/: MenuManagement.tsx  SystemSettingsManagement.tsx
frontend/src/services/: api.ts
frontend/src/services/query-forms/: query-form-api.ts
frontend/src/types/: api.ts  query-forms.ts
scripts/: README_Migration.md  check_menu.py  create_query_forms_tables.py  init_database.py  init_database_with_defaults.py  migrate_from_exported_data.py  migrate_query_forms.py  query_db.py  test_async_config.py  test_config_service.py  update_menu_label.py  validate_system.py
tests/: __init__.py  conftest.py  test_api.py
web/src/components/: DynamicForm.tsx  QueryFormBuilder.tsx  QueryResultTable.tsx
web/src/pages/: QueryFormExecution.tsx  QueryFormManagement.tsx
web/src/services/: query-form-api.ts
